--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -21,4 +21,4 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: ${{ github.event.repository.name }}
-        path: build/libs/${{ github.event.repository.name }}.jar
+        path: build/libs/${{ github.event.repository.name }}1.0.jar
